// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser indexed assignment assigns to bracketed index 1`] = `
Array [
  IndexedSet {
    "closingSquare": Object {
      "kind": 3,
      "line": 1,
      "text": "]",
    },
    "index": Literal {
      "value": Int32 {
        "kind": 3,
        "value": 0,
      },
    },
    "obj": Variable {
      "name": Object {
        "kind": 21,
        "line": 1,
        "text": "someArray",
      },
    },
    "value": Function {
      "body": Block {
        "statements": Array [],
      },
      "end": Object {
        "kind": 45,
        "line": 2,
        "text": "end function",
      },
      "keyword": Object {
        "kind": 57,
        "line": 1,
        "text": "function",
      },
      "parameters": Array [],
      "returns": 9,
    },
  },
]
`;

exports[`parser indexed assignment assigns to dotted index 1`] = `
Array [
  DottedSet {
    "name": Object {
      "kind": 21,
      "line": 1,
      "text": "bar",
    },
    "obj": Variable {
      "name": Object {
        "kind": 21,
        "line": 1,
        "text": "foo",
      },
    },
    "value": Function {
      "body": Block {
        "statements": Array [],
      },
      "end": Object {
        "kind": 45,
        "line": 2,
        "text": "end function",
      },
      "keyword": Object {
        "kind": 57,
        "line": 1,
        "text": "function",
      },
      "parameters": Array [],
      "returns": 9,
    },
  },
]
`;
